[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["PhilippeDucTai LÊ <le.philippe.duc.tai@gmail.com>"]
packages = [{include = "aoc", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"